# PDF-IDF

Maximum Coverage/: Boost_plus.h  CMakeLists.txt  IterativeDistortedFilter.h  ParallelDistortedFilter.h  RandomMultiGreedy.h  RandomSelection.h  haba_non.h  main.cpp  utilityfunction.h
Maximum Coverage/Graph/epinions/: renum_node.txt
Maximum Coverage/result/: result_epinions_renum_edge.txt_4.16_9_53_23.txt
Movie Recommendation/: Boost.h  Boost_plus.h  CMakeLists.txt  IterativeDistortedFilter.h  ParallelDistortedFilter.h  RandomMultiGreedy.h  RandomSelection.h  haba_non.h  main.cpp  utility_functions.h
Movie Recommendation/result/: movie_result_1_4.14_20_58_43.txt
Planar Subgraph Selection/: CMakeLists.txt  IterativeDistortedFilter.h  ParallelDistortedFilter.h  PlanarGraph.h  PlanarTest.h  RandomMultiGreedy.h  RandomSelection.h  haba_non.h  main.cpp  test.h  utilityfunction.h
Planar Subgraph Selection/Graph/: road-euroroad-node_weight.txt  road-euroroad-undirected.txt
Planar Subgraph Selection/result/: result_Graph_road-euroroad-undirected.txt_4.16_10_6_58.txt
